--- a/src/food/templates/test.html
+++ b/src/food/templates/test.html
@@ -3,19 +3,34 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>jQuery UI Sortable - Portlets</title>
+    <title>Food sorting</title>
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.9.2/themes/base/jquery-ui.css" />
     <script src="http://code.jquery.com/jquery-1.8.3.js"></script>
     <script src="http://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
-    <style>
-    </style>
     <script src="/static/js/test.js"></script>
-
 </head>
 <body>
  
-<select id="food">
-</select> 
+<div class="day_block">
+    <select class="portions">
+    </select> 
+    
+    <button class="add">+</button>
+
+    <ul class="food_list">
+    </ul>
+</div>
+
+<div class="day_block">
+    <select class="portions">
+    </select> 
+    
+    <button class="add">+</button>
+
+    <ul class="food_list">
+    </ul>
+</div>
+
 
 </body>
 </html>
