renamed test files 3

--- a/src/food/templates/food.html
+++ b/src/food/templates/food.html
@@ -11,7 +11,7 @@
 </head>
 <body>
  
-<div class="day_block">
+<div id="day_block1">
     <select class="portions">
     </select> 
     
@@ -21,7 +21,7 @@
     </ul>
 </div>
 
-<div class="day_block">
+<div id="day_block2">
     <select class="portions">
     </select> 
     
