--- a/src/food/templates/food.html
+++ b/src/food/templates/food.html
@@ -12,17 +12,17 @@
 </head>
 <body>
  
-<div class="day" id="day_1">
+<div class="day" id="day1">
     <div class="info">
-        proteins: <span class="proteins">0</span>g, 
-        fats: <span class="fats">0</span>g,  
-        carbohydrates: <span class="carbohydrates">0</span>g, 
-        energy: <span class="energy">0</span>kkal, 
+        proteins: <span class="proteins">0</span> g, 
+        fats: <span class="fats">0</span> g,  
+        carbohydrates: <span class="carbohydrates">0</span> g, 
+        energy: <span class="energy">0</span> kkal, 
     </div>
     <div classs="control">
         <div class="meal breakfast left">
             <select class="portions">
-            </select> 
+            </select>
             
             <button class="add">+</button>
 
